[package]
name = "mastermind"
version = "0.1.0"
authors = ["Ignacio Piqueras <ignacio.piqueras@silicon-gears.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
env_logger = "0.8"
log = "0.4"
thiserror = "1.0"
rand = "0.7"
